<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

        <item
            android:id="@+id/homeFragment"
            android:icon="@drawable/ic_baseline_home_24"
            android:iconTint="#fff"
            android:title="@string/home" />
        <item
            android:id="@+id/mapsFragment"
            android:icon="@drawable/ic_baseline_location_on_24"
            android:title="@string/MAP" />
        <item
            android:id="@+id/favFragment"
            android:icon="@drawable/ic_baseline_favorite_24"
            android:title="@string/fav" />
    <item
        android:id="@+id/AlertFragment"
        android:icon="@drawable/ic_baseline_add_alert_24"
        android:title="@string/alert" />

    <item
        android:id="@+id/SettingFragment"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/settings" />
    </menu>

