<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/g"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".home.view.HomeActivity">

        <ProgressBar
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:indicatorColor="#080809"
            android:id="@+id/progress_circular"
            />

        <TextView
            android:id="@+id/location_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/beni_suef"
            android:textColor="#fff"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="25sp"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear"
            android:textColor="#fff"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/location_name"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fri_24_feb"
            android:id="@+id/date"
            android:textColor="#BDBDBD"
            app:layout_constraintTop_toBottomOf="@+id/description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="5dp"
            android:textSize="20sp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_13_c"
            android:textColor="#BDBDBD"
            app:layout_constraintTop_toBottomOf="@+id/date"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/temp"
            android:textSize="40sp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/icon_weather"
            android:src="@drawable/cloud"
            app:layout_constraintTop_toBottomOf="@+id/date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginLeft="130dp"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_hour"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_margin="10dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/icon_weather"
            tools:listitem="@layout/item_hourly" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:id="@+id/recycler_days"
            app:layout_constraintTop_toBottomOf="@+id/recycler_hour"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="10dp"
            tools:listitem="@layout/item_day"

            />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_details"
            android:layout_width="400dp"
            android:layout_height="250dp"
            app:layout_constraintTop_toBottomOf="@+id/recycler_hour"
            app:cardCornerRadius="40dp"
            app:cardUseCompatPadding="true"
            app:cardElevation="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:backgroundTint="#6DD0FD"
            android:layout_margin="10dp"
            >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:id="@+id/icon_pressure"
                    android:src="@drawable/pressure"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginStart="20dp"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/pressure_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_1006_hpa"
                    android:textColor="#151515"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    app:layout_constraintTop_toBottomOf="@+id/icon_pressure"/>

                <TextView
                    android:id="@+id/pressure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pressure"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    android:textColor="#151515"
                    app:layout_constraintTop_toBottomOf="@+id/pressure_text"/>

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:id="@+id/icon_humidity"
                    android:src="@drawable/humidity"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginStart="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
                <TextView
                    android:id="@+id/humidity_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_100"
                    android:textColor="#151515"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    app:layout_constraintTop_toBottomOf="@+id/icon_humidity"/>

                <TextView
                    android:id="@+id/humidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/humidity"
                    android:textColor="#151515"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    app:layout_constraintTop_toBottomOf="@+id/humidity_text"/>

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:id="@+id/icon_wind"
                    android:src="@drawable/wind"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginEnd="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    />
                <TextView
                    android:id="@+id/wind_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_2_69m_s"
                    android:textColor="#151515"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="5dp"
                    app:layout_constraintTop_toBottomOf="@+id/icon_humidity"/>

                <TextView
                    android:id="@+id/wind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wind"
                    android:textSize="18sp"
                    android:textColor="#151515"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="5dp"
                    app:layout_constraintTop_toBottomOf="@+id/humidity_text"/>


                <ImageView
                    android:id="@+id/icon_cloud"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="28dp"
                    android:layout_marginStart="20dp"
                    android:src="@drawable/cloud"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/pressure" />

                <TextView
                    android:id="@+id/cloud_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_98"
                    android:textColor="#151515"
                    android:textSize="20sp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/icon_cloud"/>

                <TextView
                    android:id="@+id/cloud"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cloud"
                    android:textColor="#151515"
                    android:textSize="18sp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="5dp"
                    app:layout_constraintTop_toBottomOf="@+id/cloud_text"/>

                <ImageView
                    android:id="@+id/icon_sunrise"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="28dp"
                    android:src="@drawable/sunrise"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/humidity" />

                <TextView
                    android:id="@+id/sunrise_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_0_0"
                    android:textColor="#151515"
                    android:textSize="20sp"
                    android:layout_marginTop="5dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/icon_sunrise"/>

                <TextView
                    android:id="@+id/sunrise"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sunrise"
                    android:textSize="18sp"
                    android:textColor="#151515"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="5dp"
                    app:layout_constraintTop_toBottomOf="@+id/sunrise_text"/>

                <ImageView
                    android:id="@+id/icon_sunset"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="28dp"
                    android:layout_marginEnd="20dp"
                    android:src="@drawable/sunset"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/wind" />

                <TextView
                    android:id="@+id/sunset_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_115_m"
                    android:textColor="#151515"
                    android:textSize="20sp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/icon_sunset"/>

                <TextView
                    android:id="@+id/sunset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sunset"
                    android:textColor="#151515"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/sunset_text"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
        <TextView
            android:id="@+id/tv_forecast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="0dp"
            android:padding="5dp"
            android:text="@string/five_days_forecast"
            android:textSize="18sp"
            android:layout_marginBottom="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:drawableBottomCompat="@drawable/ic_down"
            app:layout_constraintTop_toBottomOf="@+id/card_details"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>