<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/g"
    >

    <androidx.cardview.widget.CardView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/card_lang"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="25dp"
        android:backgroundTint="#9CADE8F4"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/txt_card_lang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/language"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    <com.google.android.material.card.MaterialCardView
        app:layout_constraintTop_toBottomOf="@+id/card_lang"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/lang_card"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:topRightRadius="25dp"
        android:topLeftRadius="25dp"
        android:backgroundTint="#9CADE8F4"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        >
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/group_lan"

                    >
                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/english_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />
                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/arabic_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/english_id"
                        />
                </RadioGroup>
            </androidx.appcompat.widget.LinearLayoutCompat>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/txt_english"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/english"
                    android:textSize="20sp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginTop="10dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/arabic"
                    android:textSize="20sp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="40dp"
                    />
            </LinearLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </com.google.android.material.card.MaterialCardView>

    <androidx.cardview.widget.CardView
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/card_temp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="25dp"
        android:backgroundTint="#9CADE8F4"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/txt_card_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temperature"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        app:layout_constraintTop_toBottomOf="@+id/card_temp"
        android:id="@+id/temp_card"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:topRightRadius="25dp"
        android:topLeftRadius="25dp"
        android:backgroundTint="#9CADE8F4"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        >
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/group_temp"

                    >
                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/cel_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        />
                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/kelv_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/cel_id"
                        />
                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/Faherinheit_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/kelv_id"
                        />

                </RadioGroup>
            </androidx.appcompat.widget.LinearLayoutCompat>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/txt_cel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/celsius"
                    android:textSize="20sp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginTop="10dp" />
                <TextView
                    android:id="@+id/txt_kelv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kelvin"
                    android:textSize="20sp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="45dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/faherinheit"
                    android:textSize="18sp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="5dp"
                    />
            </LinearLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        app:layout_constraintTop_toBottomOf="@+id/temp_card"
        android:id="@+id/card_wind_speed"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="25dp"
        android:backgroundTint="#9CADE8F4"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/txt_card_wind_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wind_speed"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.card.MaterialCardView
        app:layout_constraintTop_toBottomOf="@+id/card_wind_speed"
        android:id="@+id/wind_card"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:topRightRadius="25dp"
        android:topLeftRadius="25dp"
        android:backgroundTint="#9CADE8F4"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        >
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/group_wind"

                    >
                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/meter_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/mile_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/meter_id"
                        />
                </RadioGroup>
            </androidx.appcompat.widget.LinearLayoutCompat>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/txt_meter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/meter_sec"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="@+id/meter_id"
                    android:layout_marginTop="10dp"
                    app:layout_constraintTop_toTopOf="parent" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mile_hour"
                    android:textSize="18sp"
                    android:layout_marginTop="20dp"
                    />
            </LinearLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>